test.txt

> java-script-arithmetic-lab@0.1.0 test /home/jayvalentine87-51727/code/labs/javascript-arithmetic-lab-bootcamp-prep-000
> mocha -R mocha-multi --reporter-options nyan=-,json=.results.json

 0
 0
 0

[4A[5C-
[5C-
[5C-
[5C-
[4A[6C_,------,
[6C_|   /\_/\ 
[6C^|__( - .-) 
[6C  ""  "" 
[4A 0
 1
 0

[4A[5C-_
[5C-_
[5C-_
[5C-_
[4A[7C_,------,
[7C_|  /\_/\ 
[7C~|_( x .x) 
[7C ""  "" 
[4A




  0 passing (431ms)
  1 failing

  1)  "before all" hook:
     SyntaxError: /home/jayvalentine87-51727/code/labs/javascript-arithmetic-lab-bootcamp-prep-000/index.js: Unexpected token (1:13)
  > 1 | function add(1, 80) {
      |              ^
    2 | 
    3 | }
    4 | 
      at Parser.pp$5.raise (node_modules/babylon/lib/index.js:4373:13)
      at Parser.pp.unexpected (node_modules/babylon/lib/index.js:1716:8)
      at Parser.pp$2.parseBindingAtom (node_modules/babylon/lib/index.js:3023:12)
      at Parser.pp$2.parseMaybeDefault (node_modules/babylon/lib/index.js:3069:23)
      at Parser.pp$2.parseBindingList (node_modules/babylon/lib/index.js:3049:23)
      at Parser.pp$1.parseFunctionParams (node_modules/babylon/lib/index.js:2350:22)
      at Parser.pp$1.parseFunction (node_modules/babylon/lib/index.js:2340:8)
      at Parser.pp$1.parseFunctionStatement (node_modules/babylon/lib/index.js:2008:15)
      at Parser.pp$1.parseStatement (node_modules/babylon/lib/index.js:1794:19)
      at Parser.pp$1.parseBlockBody (node_modules/babylon/lib/index.js:2223:21)
      at Parser.pp$1.parseTopLevel (node_modules/babylon/lib/index.js:1733:8)
      at Parser.parse (node_modules/babylon/lib/index.js:1628:17)
      at parse (node_modules/babylon/lib/index.js:7083:37)
      at File.parse (node_modules/babel-core/lib/transformation/file/index.js:527:15)
      at File.parseCode (node_modules/babel-core/lib/transformation/file/index.js:612:20)
      at node_modules/babel-core/lib/transformation/pipeline.js:49:12
      at File.wrap (node_modules/babel-core/lib/transformation/file/index.js:574:16)
      at Pipeline.transform (node_modules/babel-core/lib/transformation/pipeline.js:47:17)
      at Object.transformFileSync (node_modules/babel-core/lib/api/node.js:152:10)
      at Context.<anonymous> (test/root.js:9:29)



